--- a/CrewChiefV4/CrewChiefV4.csproj
+++ b/CrewChiefV4/CrewChiefV4.csproj
@@ -317,6 +317,7 @@
     <Compile Include="iRacing\Track.cs" />
     <Compile Include="Logging.cs" />
     <Compile Include="NumberProcessing\CarNumber.cs" />
+    <Compile Include="NumberProcessing\SpokenNumberParser.cs" />
     <Compile Include="NumberReaderPtBr.cs" />
     <Compile Include="NumberReaderIt2.cs" />
     <Compile Include="Overlay\Charts.cs" />
