allow the user to disable the opponents speech recognition phrases

--- a/CrewChiefV4/App.config
+++ b/CrewChiefV4/App.config
@@ -1007,6 +1007,9 @@
       <setting name="TOGGLE_MUTE_device_type" serializeAs="String">
         <value />
       </setting>
+      <setting name="sre_enable_opponents" serializeAs="String">
+        <value>True</value>
+      </setting>
       <setting name="sre_enable_opponents_by_position" serializeAs="String">
         <value>True</value>
       </setting>
